[package]
name = "irc"
version = "0.13.6"
description = "the irc crate – usable, async IRC for Rust "
authors = ["Aaron Weiss <awe@pdgn.co>"]
license = "MPL-2.0"
keywords = ["irc", "client", "thread-safe", "async", "tokio"]
categories = ["asynchronous", "network-programming"]
documentation = "https://docs.rs/irc/"
repository = "https://github.com/aatxe/irc"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "aatxe/irc" }
is-it-maintained-issue-resolution = { repository = "aatxe/irc" }
is-it-maintained-open-issues = { repository = "aatxe/irc" }

[workspace]
members = [ "./", "irc-proto" ]

[features]
default = ["ctcp", "toml"]
ctcp = []
nochanlists = []
json = ["serde_json"]
yaml = ["serde_yaml"]

[dependencies]
bufstream = "0.1"
bytes = "0.4"
chrono = "0.4"
encoding = "0.2"
failure = "0.1"
irc-proto = { version = "*", path = "irc-proto" }
log = "0.4"
native-tls = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tokio = "0.2.0-alpha.5"
tokio-tls = "0.3.0-alpha.5"
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.7", optional = true }
toml = { version = "0.4", optional = true }
pin-utils = "0.1.0-alpha.4"
parking_lot = "0.9.0"

[dependencies.futures]
package = "futures-preview"
version = "0.3.0-alpha.18"
features = ["nightly", "async-await"]

[dev-dependencies]
args = "2.0"
getopts = "0.2"
env_logger = "0.6.2"